# ced

./: .gitignore  CMakeLists.txt  Dependencies.mk  Makefile  README.md  StaticLib.mk
cate/: build.cate  libced.cate
include/ced/: bufio.h  io.h  io_fcntl.h  memory.h  string.h  user.h
src/: bufio.c  io.c  io_fcntl.c  main.c  memory.c  string.c  user.c
